bundle/tests/scorecard/kind-kuttl/ingress-certificate/00-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: ingress-tls-secret
type: kubernetes.io/tls
data:
  # 'tlscrt'
  tls.crt: dGxzY3J0Cg==
  # 'tlskey'
  tls.key: dGxza2V5Cg==
  # 'cacrt'
  ca.crt: Y2FjcnQK
  # 'destCAcrt'
  destCA.crt: ZGVzdENBY3J0Cg==
