bundle/tests/scorecard/kind-kuttl/ingress-certificate/01-rc-with-cert.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: ingress-with-cert-rc
spec:
  # Add fields here
  applicationImage: registry.k8s.io/pause:3.2
  replicas: 1
  expose: true
  route:
    host: myapp.mycompany.com
    path: "/"
    pathType: Prefix
    certificateSecretRef: ingress-tls-secret
    termination: reencrypt
