bundle/tests/scorecard/kind-kuttl/ingress-certificate/02-delete-route.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: ingress-with-cert-rc
spec:
  # Add fields here
  expose: false
