bundle/tests/scorecard/kind-kuttl/ingress-certificate/00-assert.yaml
apiVersion: v1
kind: Secret
type: kubernetes.io/tls
metadata:
  name: ingress-tls-secret
data:
  ca.crt: Y2FjcnQK
  destCA.crt: ZGVzdENBY3J0Cg==
  tls.crt: dGxzY3J0Cg==
  tls.key: dGxza2V5Cg==
