bundle/tests/scorecard/kind-kuttl/ingress-certificate/02-errors.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-cert-rc
